test/parse/expr/bad-block-sig-multi.txt
;;; ERROR: 1
(module
  (func
    block (result i32 i32)
      i32.const 1
      i32.const 1
    end
    drop
    drop))
(;; STDERR ;;;
out/test/parse/expr/bad-block-sig-multi.txt:4:5: error: multiple block signature result types not currently supported.
    block (result i32 i32)
    ^^^^^
;;; STDERR ;;)
